--- a/style.css
+++ b/style.css
@@ -171,3 +171,15 @@ a.navbar-brand:hover {
     margin: 10px 14px; 
   }
 }
+
+table.floatThead-table {
+    border-top: none;
+    border-bottom: none;
+    background-color: #fff;
+}
+
+th {
+  position: sticky;
+  top: 50px;
+  background: white;
+}
