--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
     position: relative;
     margin-bottom: 2em;
     /* liner gradient tints the image darker for readability*/
-    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(lab_background.png); 
+    background-image: linear-gradient( rgba(0,0,0,.2), rgba(0,0,0,.2) ), url(lab_background.jpg); 
     height: 400px;
     background-size: cover;
     background-color: #141c25f2;
