--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+
  /*------------- Whole Document---------------- */
 
 body {
-    font-family: 'Lato:wght@300';
+    font-family: 'Nunito', sans-serif;
     font-size: 18px;
 }
 
