--- a/style2.css
+++ b/style2.css
@@ -17,7 +17,7 @@ body {
   display: block;
   height: 200px;
   margin: 2.75em 20px 40px 20px;
-  background-image: url("logo.png");
+  background-image: url("research_logo.png");
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
