--- a/style.css
+++ b/style.css
@@ -185,3 +185,10 @@ th {
   top: 50px;
   background: white;
 }
+
+#demobox {
+  background-color: #FFF5EE ;
+  padding: 8px ;
+  border: 1px solid black;
+  border-radius: 20px ;
+}
